[package]
name = "linera"
version = "0.1.0"
edition = "2024"

[dependencies]
linera-sdk = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
async-graphql = { version = "6.0", features = ["uuid", "chrono"] }
log = "0.4"
serde-wasm-bindgen = "0.5"
linera-wasmer = { version = "4.4.0-linera.7" }
linera-wasmer-vm = { version = "4.4.0-linera.7" }

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
linera-wasmer = { version = "4.4.0-linera.7" }
linera-wasmer-vm = { version = "4.4.0-linera.7" }